Name:                   mellon-server
Version:                0.6.0.1
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/mellon/
Bug-Reports:            https://github.com/dhess/mellon/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2016, Drew Hess
Tested-With:            GHC == 7.10.3
Category:               Web
Synopsis:               A REST web service for mellon
Description:
  @mellon-server@ wraps a @mellon-core@ controller in a REST web service.
  .
  See the included <API.md API.md> file for detailed documentation
  on the REST service methods and document types.
  .
  Note that @mellon-server@ does not provide an authentication
  mechanism! You should proxy @mellon-server@ behind a secure
  HTTPS server such as Nginx.
Extra-Doc-Files:        API.md
                      , README.md
Extra-Source-Files:     changelog.md
                      , examples/*.hs

-- Build doctests
Flag test-doctests
  Default: True
  Manual: True

-- Build hlint test
Flag test-hlint
  Default: True
  Manual: True

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  Exposed-Modules:      Mellon.Server
                      , Mellon.Server.API
                      , Mellon.Server.Docs
  Other-Extensions:     DataKinds
                      , DeriveGeneric
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , ScopedTypeVariables
                      , TypeOperators
  Build-Depends:        base           >= 4 && < 5
                      , aeson          >= 0.11.0 && < 0.12
                      , bytestring
                      , either
                      , http-types
                      , lucid
                      , mellon-core
                      , servant
                      , servant-docs
                      , servant-lucid
                      , servant-server 
                      , text
                      , time
                      , transformers
                      , wai
                      , warp

Test-Suite hlint
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              hlint.hs
  If !flag(test-hlint)
    Buildable:          False
  Else
    Build-Depends:      base
                      , hlint

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  Main-Is:              doctest.hs
  If !flag(test-doctests)
    Buildable:          False
  Else
    Build-Depends:      base
                      , doctest

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              Main.hs
  Build-Depends:        aeson
                      , base
                      , bytestring
                      , either
                      , hspec
                      , hspec-wai
                      , http-client
                      , http-types
                      , lucid
                      , mellon-core
                      , servant
                      , servant-docs
                      , servant-lucid
                      , servant-server
                      , text
                      , time
                      , transformers
                      , wai
                      , wai-extra
                      , warp
  Other-Modules:        Mellon.Server
                      , Mellon.Server.API
                      , Mellon.Server.Docs
                      , MellonServerSpec
                      , Spec

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/mellon.git

Source-Repository this
  Type:                 git
  Location:             git://github.com/dhess/mellon.git
  Tag:                  v0.6.0.1
