Name:                   mellon-web
Version:                0.6.0.1
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/mellon/
Bug-Reports:            https://github.com/dhess/mellon/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2016, Drew Hess
Tested-With:            GHC == 7.10.3
Category:               Web
Synopsis:               A REST web service for Mellon controllers
Description:
  The @mellon-web@ package wraps a @mellon-core@ controller in a REST
  web service, and includes both a WAI application and native Haskell
  client bindings for the service.
  .
  Like the @mellon-core@ controller interface, the @mellon-web@ REST API
  is quite simple. There are only 3 methods:
  .
  * @GET /time@ returns the system time on the server. This is made
    available for diagnostic purposes, primarily to ensure the server
    has an accurate clock.
  .
  * @GET /state@ returns the controller's current state (either @Locked@
    or @Unlocked date@ where @date@ is the UTC time at which the
    controller will automatically lock again).
  .
  * @PUT /state@ sets the controller's current state. Use this method to
    lock and unlock the controller.
  .
  See the included <API.md API.md> document for detailed documentation
  on the REST service.
  .
  Note that the @mellon-web@ server does not provide an authentication
  mechanism! You should proxy it behind a secure, authenticating HTTPS
  server such as Nginx.
Extra-Doc-Files:        API.md
                      , README.md
Extra-Source-Files:     changelog.md
                      , examples/*.hs
                      , mellon-web.paw

-- Build doctests
Flag test-doctests
  Default: True
  Manual: True

-- Build hlint test
Flag test-hlint
  Default: True
  Manual: True

-- Build example
Flag example
  Default: True
  Manual: True

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  Exposed-Modules:      Mellon.Web.Server
                      , Mellon.Web.Server.API
                      , Mellon.Web.Server.DocsAPI
  Other-Extensions:     DataKinds
                      , DeriveGeneric
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , TypeOperators
  Build-Depends:        base           >= 4 && < 5
                      , aeson          >= 0.11.0 && < 0.12
                      , bytestring
                      , either
                      , http-types
                      , lucid
                      , mellon-core
                      , servant
                      , servant-docs
                      , servant-lucid
                      , servant-server 
                      , text
                      , time
                      , transformers
                      , wai
                      , warp

Executable mock-mellon-server
  Main-Is:              MockServer.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       examples
  GHC-Options:          -Wall -threaded -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  If !flag(example)
    Buildable:         False
  Else                        
    Build-Depends:      base >= 4 && < 5
                      , mellon-core
                      , mellon-web
                      , warp

Test-Suite hlint
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              hlint.hs
  If !flag(test-hlint)
    Buildable:          False
  Else
    Build-Depends:      base
                      , hlint

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  Main-Is:              doctest.hs
  If !flag(test-doctests)
    Buildable:          False
  Else
    Build-Depends:      base
                      , doctest

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              Main.hs
  Other-Extensions:     ScopedTypeVariables
  Build-Depends:        aeson
                      , base
                      , bytestring
                      , either
                      , hspec
                      , hspec-wai
                      , http-client
                      , http-types
                      , lucid
                      , mellon-core
                      , servant
                      , servant-docs
                      , servant-lucid
                      , servant-server
                      , text
                      , time
                      , transformers
                      , wai
                      , wai-extra
                      , warp
  Other-Modules:        Mellon.Web.Server
                      , Mellon.Web.Server.API
                      , Mellon.Web.Server.DocsAPI
                      , Spec
                      , Mellon.Web.ServerSpec

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/mellon.git

Source-Repository this
  Type:                 git
  Location:             git://github.com/dhess/mellon.git
  Tag:                  v0.6.0.1
